move books around

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ layout: default
     <h1 class="small-header">Books</h1>
     <div class="border"></div>
     <h3>Books for Professionals</h3>
-    <div class="section-books half">
+    <div class="section-books third">
       {% for book in site.books do %}
       {% if book.type == 'corporate' %}
       <div class="book">
